# IPTV-Speedtest

./: Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: 12.yml  main.yml
src/: channel.rs  config.rs  main.rs  output.rs  speedtest.rs  subscribe.rs  task.rs
