[package]
name = "iptv-speed-tester"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
regex = "1"
url = "2"
once_cell = "1"
chrono = "0.4"
anyhow = "1"
futures-util = "0.3"
