[package]
name = "iptv-speed-tester"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# 禁用 default-tls（openssl），改用纯 Rust 的 rustls，交叉编译无需系统 OpenSSL
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.7", default-features = false, features = [
    "tokio",
    "http1",
    "json",
] }
regex = "1"
url = "2"
once_cell = "1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.9"
cron = "0.12"
anyhow = "1"
futures-util = "0.3"

[profile.release]
strip         = "symbols"  # 剥离调试符号表，不影响运行
debug         = false      # 不内嵌调试信息
lto           = "thin"     # 跨 crate 裁掉未调用的代码，thin 构建速度可接受
codegen-units = 1          # 单编译单元，允许更完整的内联分析
